<resources>
    <string name="app_name">Englishease</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">This is authorization fragment</string>
    <string name="auth_to_register_btn">Already have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="create_account">Create account</string>
    <string name="repeat_password">Repeat password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="theory">Theory</string>
    <string name="tests">Tests</string>
    <string name="test_name">theory_theme</string>
    <string name="test_results">Test results</string>
    <string name="selected_theory_text">Here is selected theory text: rules, examples, etc.</string>
    <string name="user">User</string>
    <string name="results">Results</string>
    <string name="date">Date</string>
    <string name="progress">1/10</string>
    <string name="questDeclaration">question declaration</string>
    <string name="variant1">variant 1</string>
    <string name="variant2">variant 2</string>
    <string name="variant3">variant 3</string>
    <string name="variant4">variant 4</string>
    <string name="continueButton">continue</string>
    <string name="result_text">Results</string>
    <string name="theory_name">Theory name</string>
    <string name="hello">Choose lesson you want to learn</string>
    <string name="theory_text">This is theory text.This is theory text.This is theory text.This is theory text.This is theory text.
    This is theory text.This is theory text.This is theory text.This is theory text.This is theory text.This is theory text.
    This is theory text.This is theory text.This is theory text.This is theory text.This is theory text.
    This is theory text.This is theory text.This is theory text.This is theory text.This is theory text.This is theory text.
    This is theory text.This is theory text.This is theory text.This is theory text.This is theory text.This is theory text.</string>
    <string name="start_test">Start test</string>
    <string name="showAllTestResults">Show all test results</string>
    <string name="tvResultText">Результат</string>
    <string name="testResult">Результат теста</string>
    <string name="toTestsListText">Перейти к каталогу тестов</string>
    <string name="user_header">Users</string>
    <string name="results_header">Results</string>
    <string name="date_header">Date</string>

</resources>