<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.SelectedTestFragment">

    <TextView
        android:id="@+id/textViewSubjectNameQuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/test_name"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:text="@string/progress"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSubjectNameQuest" />

    <TextView
        android:id="@+id/textViewQuestDeclaration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/questDeclaration"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewProgress" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/buttonContinue"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuestDeclaration">

        <RadioButton
            android:id="@+id/radioButton_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/variant1"
            app:layout_constraintEnd_toStartOf="@id/radioButton_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/radioButton_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/variant2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/radioButton_1"
            app:layout_constraintTop_toTopOf="@id/radioButton_1" />

        <RadioButton
            android:id="@+id/radioButton_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/variant3"
            app:layout_constraintEnd_toStartOf="@+id/radioButton_4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioButton_1" />

        <RadioButton
            android:id="@+id/radioButton_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/variant4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/radioButton_3"
            app:layout_constraintTop_toTopOf="@id/radioButton_3" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="#1640D6"
        android:text="@string/continueButton"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>