<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#493B0B"
    tools:context=".presentation.AuthorizationFragment">

    <TextView
        android:id="@+id/forgot_pass_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="#697F88"
        android:textSize="15sp"
        android:layout_marginTop="190dp"
        app:layout_constraintBottom_toTopOf="@id/login_edittext"
        app:layout_constraintEnd_toEndOf="@+id/login_edittext"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/login_edittext"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:background="#FFFFFF"
        android:hint="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_pass_btn" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_edittext"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/authorize_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edittext" />

    <TextView
        android:id="@+id/create_acc_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/create_account"
        android:textColor="#697F88"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>