<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#493B0B"
    tools:context=".presentation.MainFragment">

    <Button
        android:id="@+id/theory_btn"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:text="@string/theory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/tests_btn"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:text="@string/tests"
        android:layout_marginTop="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/theory_btn"
        app:layout_constraintVertical_bias="0.23" />

    <Button
        android:id="@+id/test_results_btn"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:text="@string/test_results"
        android:layout_marginTop="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tests_btn"
        app:layout_constraintVertical_bias="0.23" />

</androidx.constraintlayout.widget.ConstraintLayout>