<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9c46a"
    tools:context=".presentation.SelectedTestResultFragment">

    <TextView
        android:id="@+id/textViewAllResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/test_results"
        android:textColor="#2a9d8f"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutResultsText"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAllResults">


        <TextView
            android:id="@+id/textViewUserResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#264653"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/user" />

        <TextView
            android:id="@+id/textViewResResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#264653"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/results" />

        <TextView
            android:id="@+id/textViewDateResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#264653"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/date" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewResults"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="185dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutResultsText" />

</androidx.constraintlayout.widget.ConstraintLayout>