<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e9c46a"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".presentation.SelectedTheoryFragment">

        <TextView
            android:id="@+id/textViewSubjectNameStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/theory_name"
            android:textAlignment="center"
            android:textColor="#2a9d8f"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/theory_text_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/theory_text"
            android:textColor="#264653"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSubjectNameStart" />

        <Button
            android:id="@+id/start_test_btn"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/start_test"
            android:backgroundTint="#e76f51"
            android:textAllCaps="false"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/theory_text_text_view"/>

        <Button
            android:id="@+id/buttonShowResultsStart"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#e76f51"
            android:text="@string/showAllTestResults"
            android:textAllCaps="false"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_test_btn"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>